hphp/test/slow/constant/realias.php.expectf

Fatal error: Cannot use const other\baz as baz because the name is already in use in %s/constant/realias.php on line 13
